resolved issue with alignment in _cart.less

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_cart.less
@@ -97,7 +97,8 @@
                 .field {
                     .radio {
                         float: left;
-                        margin-top: 4px;
+                        height: 20px;
+                        line-height: 20px;
                     }
 
                     .radio {
